fixed footer css

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -112,16 +112,6 @@ main {
     color: #ffffff;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
 .content-section img {
     max-height: 200px;
 }
@@ -133,13 +123,13 @@ main {
 }
 
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
