--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,3 +1,5 @@
+/* universal selector applies to all elements */
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -7,6 +9,17 @@
 body {
     background-color: #d9dcd6;
 }
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
+/* header style */ 
 
 header {
     padding: 20px;
@@ -41,15 +54,6 @@ header nav ul li {
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
 .hero {
     height: 800px;
     width: 100%;
@@ -75,7 +79,7 @@ p {
     margin-left: 20px;
 }
 
-main {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -92,6 +96,7 @@ main {
 }
 
 .benefits h3 {
+    margin-top: 10px;
     margin-bottom: 10px;
     text-align: center;
 }
