--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -108,6 +108,7 @@ header nav ul li {
 
 aside {
     margin-right: 20px;
+    margin-bottom: 20px;
     padding: 20px;
     clear: both;
     float: right;
